[tool.poetry]
name = "confspawn"
version = "0.1.2"
description = ""
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = {extras = ["ini"], version = "^3.1.7"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
