[tool.poetry]
name = "confspawn"
version = "0.2.3"
description = "Easily build configuration files from templates."
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.urls]
"Source Code" = "https://github.com/tiptenbrink/confspawn"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^3.1.0"
tomli = "^2.0.1"

[tool.poetry.scripts]
confspawn = "confspawn.cli:spawner"
confenv = "confspawn.cli:config_value"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pdoc3 = "^0.10.0"
docformatter = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
